tests/e2e/unary_complex_3c.story
b = 42
t = 21
a = [b == 2, true] <= ! (t == t)
